# ProMaid

./: ProMaid 语法手册.md  README.md  pyproject.toml
code/prompt/PML/: PML语法手册.md  advanced_template_sparc_test.txt  demo_template.txt  errors.py  keyword_enum.py  pml_builder_demo.py  pml_parser.py  prompt_tree_node.py  readme.md  sparc_dev_[389, 19, 141, 329, 344, 126, 59, 46, 199, 147].json  test_advanced_prompt_builder.py
code/prompt/PML/demos/harder_demo/: sparc_sub_dataset.pml
code/prompt/PML/demos/simple_demo/: demo_template.pml  pml_builder_demo.py
docs/zh-cn/: 错误处理.md
examples/harder_demo/: sparc_sub_dataset.pml  sparc_sub_dataset_pml.py
examples/simple_demo/: pml_builder_demo.py
experimental/: test_exec.py
src/ProMaid/: __init__.py  keyword_enum.py  pml_parser.py  prompt_tree_node.py
